# rag-agentiic-test

./: GETTING_STARTED.md  LIGHTRAG_INTEGRATION.md  PYDANTIC_AI_MIGRATION.md  QUICK_START.md  TESTING_GUIDE.md  WORKFLOW_DIAGRAM_COMPLIANCE.md  setup.bat  setup.sh  start.bat  start.ps1  start.py
agent/: README.md  demo.py  fix_dependencies.sh  pyproject.toml  pyproject_clean.toml  requirements.txt  setup.ps1  setup.sh  start.bat  start.py
agent/src/: agent.py  main.py  models.py  tools.py
src/app/: layout.tsx  page.tsx
src/components/: proverbs.tsx
src/lib/: types.ts
